lab-4-semantic-analysis/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instruction
Rule 3     instructions -> instruction instructions
Rule 4     instruction -> assignment
Rule 5     instruction -> ifx
Rule 6     instruction -> if_else
Rule 7     instruction -> for
Rule 8     instruction -> while
Rule 9     instruction -> command
Rule 10    instruction -> return
Rule 11    instruction -> print
Rule 12    instruction -> compound
Rule 13    assignment -> ID = expression ;
Rule 14    assignment -> ID ADDASSIGN expression ;
Rule 15    assignment -> ID SUBASSIGN expression ;
Rule 16    assignment -> ID MULASSIGN expression ;
Rule 17    assignment -> ID DIVASSIGN expression ;
Rule 18    assignment -> ID [ vector ] = expression ;
Rule 19    assignment -> ID = ID [ vector ] ;
Rule 20    ifx -> IF ( condition ) instruction
Rule 21    if_else -> IF ( condition ) instruction ELSE instruction
Rule 22    for -> FOR iterator instruction
Rule 23    iterator -> ID = factor : factor
Rule 24    while -> WHILE ( condition ) instruction
Rule 25    command -> BREAK ;
Rule 26    command -> CONTINUE ;
Rule 27    return -> RETURN ;
Rule 28    return -> RETURN expression ;
Rule 29    print -> PRINT DOUBLEAPOSTROPHE expression DOUBLEAPOSTROPHE ;
Rule 30    print -> PRINT vector ;
Rule 31    compound -> { program }
Rule 32    compound -> { }
Rule 33    condition -> expression_comparison
Rule 34    factor -> ID
Rule 35    factor -> number
Rule 36    number -> INTNUM
Rule 37    number -> FLOATNUM
Rule 38    expression -> factor
Rule 39    expression -> expression_bin_op
Rule 40    expression -> expression_dot_bin_op
Rule 41    expression -> expression_uminus
Rule 42    expression -> expression_transposition
Rule 43    expression -> expression_comparison
Rule 44    expression -> expression_matrix
Rule 45    expression -> expression_table
Rule 46    expression_bin_op -> expression PLUS expression
Rule 47    expression_bin_op -> expression MINUS expression
Rule 48    expression_bin_op -> expression TIMES expression
Rule 49    expression_bin_op -> expression DIVIDE expression
Rule 50    expression_dot_bin_op -> expression DOTADD expression
Rule 51    expression_dot_bin_op -> expression DOTSUB expression
Rule 52    expression_dot_bin_op -> expression DOTMUL expression
Rule 53    expression_dot_bin_op -> expression DOTDIV expression
Rule 54    expression_uminus -> MINUS expression
Rule 55    expression_transposition -> ID APOSTROPHE
Rule 56    expression_comparison -> expression LESS_THAN expression
Rule 57    expression_comparison -> expression GREATER_THAN expression
Rule 58    expression_comparison -> expression LESS_OR_EQUAL_THAN expression
Rule 59    expression_comparison -> expression GREATER_OR_EQUAL_THAN expression
Rule 60    expression_comparison -> expression NOT_EQUAL expression
Rule 61    expression_comparison -> expression EQUAL expression
Rule 62    expression_matrix -> ZEROS ( factor )
Rule 63    expression_matrix -> EYE ( factor )
Rule 64    expression_matrix -> ONES ( factor )
Rule 65    expression_table -> [ ]
Rule 66    expression_table -> [ matrix ]
Rule 67    matrix -> vector ; matrix
Rule 68    matrix -> vector
Rule 69    vector -> factor , vector
Rule 70    vector -> factor

Terminals, with rules where they appear

(                    : 20 21 24 62 63 64
)                    : 20 21 24 62 63 64
,                    : 69
:                    : 23
;                    : 13 14 15 16 17 18 19 25 26 27 28 29 30 67
=                    : 13 18 19 23
ADDASSIGN            : 14
APOSTROPHE           : 55
BREAK                : 25
CONTINUE             : 26
DIVASSIGN            : 17
DIVIDE               : 49
DOTADD               : 50
DOTDIV               : 53
DOTMUL               : 52
DOTSUB               : 51
DOUBLEAPOSTROPHE     : 29 29
ELSE                 : 21
EQUAL                : 61
EYE                  : 63
FLOATNUM             : 37
FOR                  : 22
GREATER_OR_EQUAL_THAN : 59
GREATER_THAN         : 57
ID                   : 13 14 15 16 17 18 19 19 23 34 55
IF                   : 20 21
INTNUM               : 36
LESS_OR_EQUAL_THAN   : 58
LESS_THAN            : 56
MINUS                : 47 54
MULASSIGN            : 16
NOT_EQUAL            : 60
ONES                 : 64
PLUS                 : 46
PRINT                : 29 30
RETURN               : 27 28
SUBASSIGN            : 15
TIMES                : 48
WHILE                : 24
ZEROS                : 62
[                    : 18 19 65 66
]                    : 18 19 65 66
error                : 
{                    : 31 32
}                    : 31 32

Nonterminals, with rules where they appear

assignment           : 4
command              : 9
compound             : 12
condition            : 20 21 24
expression           : 13 14 15 16 17 18 28 29 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 56 56 57 57 58 58 59 59 60 60 61 61
expression_bin_op    : 39
expression_comparison : 33 43
expression_dot_bin_op : 40
expression_matrix    : 44
expression_table     : 45
expression_transposition : 42
expression_uminus    : 41
factor               : 23 23 38 62 63 64 69 70
for                  : 7
if_else              : 6
ifx                  : 5
instruction          : 2 3 20 21 21 22 24
instructions         : 1 3
iterator             : 22
matrix               : 66 67
number               : 35
print                : 11
program              : 31 0
return               : 10
vector               : 18 19 30 67 68 69
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instruction
    (3) instructions -> . instruction instructions
    (4) instruction -> . assignment
    (5) instruction -> . ifx
    (6) instruction -> . if_else
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . command
    (10) instruction -> . return
    (11) instruction -> . print
    (12) instruction -> . compound
    (13) assignment -> . ID = expression ;
    (14) assignment -> . ID ADDASSIGN expression ;
    (15) assignment -> . ID SUBASSIGN expression ;
    (16) assignment -> . ID MULASSIGN expression ;
    (17) assignment -> . ID DIVASSIGN expression ;
    (18) assignment -> . ID [ vector ] = expression ;
    (19) assignment -> . ID = ID [ vector ] ;
    (20) ifx -> . IF ( condition ) instruction
    (21) if_else -> . IF ( condition ) instruction ELSE instruction
    (22) for -> . FOR iterator instruction
    (24) while -> . WHILE ( condition ) instruction
    (25) command -> . BREAK ;
    (26) command -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN expression ;
    (29) print -> . PRINT DOUBLEAPOSTROPHE expression DOUBLEAPOSTROPHE ;
    (30) print -> . PRINT vector ;
    (31) compound -> . { program }
    (32) compound -> . { }

    ID              shift and go to state 15
    IF              shift and go to state 10
    FOR             shift and go to state 12
    WHILE           shift and go to state 2
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 3
    RETURN          shift and go to state 1
    PRINT           shift and go to state 4
    {               shift and go to state 21

    if_else                        shift and go to state 11
    for                            shift and go to state 6
    assignment                     shift and go to state 13
    instruction                    shift and go to state 17
    ifx                            shift and go to state 18
    while                          shift and go to state 20
    program                        shift and go to state 7
    command                        shift and go to state 9
    compound                       shift and go to state 14
    print                          shift and go to state 8
    return                         shift and go to state 5
    instructions                   shift and go to state 16

state 1

    (27) return -> RETURN . ;
    (28) return -> RETURN . expression ;
    (38) expression -> . factor
    (39) expression -> . expression_bin_op
    (40) expression -> . expression_dot_bin_op
    (41) expression -> . expression_uminus
    (42) expression -> . expression_transposition
    (43) expression -> . expression_comparison
    (44) expression -> . expression_matrix
    (45) expression -> . expression_table
    (34) factor -> . ID
    (35) factor -> . number
    (46) expression_bin_op -> . expression PLUS expression
    (47) expression_bin_op -> . expression MINUS expression
    (48) expression_bin_op -> . expression TIMES expression
    (49) expression_bin_op -> . expression DIVIDE expression
    (50) expression_dot_bin_op -> . expression DOTADD expression
    (51) expression_dot_bin_op -> . expression DOTSUB expression
    (52) expression_dot_bin_op -> . expression DOTMUL expression
    (53) expression_dot_bin_op -> . expression DOTDIV expression
    (54) expression_uminus -> . MINUS expression
    (55) expression_transposition -> . ID APOSTROPHE
    (56) expression_comparison -> . expression LESS_THAN expression
    (57) expression_comparison -> . expression GREATER_THAN expression
    (58) expression_comparison -> . expression LESS_OR_EQUAL_THAN expression
    (59) expression_comparison -> . expression GREATER_OR_EQUAL_THAN expression
    (60) expression_comparison -> . expression NOT_EQUAL expression
    (61) expression_comparison -> . expression EQUAL expression
    (62) expression_matrix -> . ZEROS ( factor )
    (63) expression_matrix -> . EYE ( factor )
    (64) expression_matrix -> . ONES ( factor )
    (65) expression_table -> . [ ]
    (66) expression_table -> . [ matrix ]
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM

    ;               shift and go to state 31
    ID              shift and go to state 37
    MINUS           shift and go to state 26
    ZEROS           shift and go to state 34
    EYE             shift and go to state 32
    ONES            shift and go to state 39
    [               shift and go to state 35
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 23

    expression_transposition       shift and go to state 38
    expression_uminus              shift and go to state 33
    expression_comparison          shift and go to state 29
    number                         shift and go to state 22
    expression_matrix              shift and go to state 36
    expression_table               shift and go to state 25
    factor                         shift and go to state 30
    expression_bin_op              shift and go to state 28
    expression                     shift and go to state 40
    expression_dot_bin_op          shift and go to state 27

state 2

    (24) while -> WHILE . ( condition ) instruction

    (               shift and go to state 41


state 3

    (26) command -> CONTINUE . ;

    ;               shift and go to state 42


state 4

    (29) print -> PRINT . DOUBLEAPOSTROPHE expression DOUBLEAPOSTROPHE ;
    (30) print -> PRINT . vector ;
    (69) vector -> . factor , vector
    (70) vector -> . factor
    (34) factor -> . ID
    (35) factor -> . number
    (36) number -> . INTNUM
    (37) number -> . FLOATNUM

    DOUBLEAPOSTROPHE shift and go to state 43
    ID              shift and go to state 46
    INTNUM          shift and go to state 24
    FLOATNUM        shift and go to state 23

    vector                         shift and go to state 44
    number                         shift and go to state 22
    factor                         shift and go to state 45

state 5

    (10) instruction -> return .

    ID              reduce using rule 10 (instruction -> return .)
    IF              reduce using rule 10 (instruction -> return .)
    FOR             reduce using rule 10 (instruction -> return .)
    WHILE           reduce using rule 10 (instruction -> return .)
    BREAK           reduce using rule 10 (instruction -> return .)
    CONTINUE        reduce using rule 10 (instruction -> return .)
    RETURN          reduce using rule 10 (instruction -> return .)
    PRINT           reduce using rule 10 (instruction -> return .)
    {               reduce using rule 10 (instruction -> return .)
    $end            reduce using rule 10 (instruction -> return .)
    }               reduce using rule 10 (instruction -> return .)
    ELSE            reduce using rule 10 (instruction -> return .)


state 6

    (7) instruction -> for .

    ID              reduce using rule 7 (instruction -> for .)
    IF              reduce using rule 7 (instruction -> for .)
    FOR             reduce using rule 7 (instruction -> for .)
    WHILE           reduce using rule 7 (instruction -> for .)
    BREAK           reduce using rule 7 (instruction -> for .)
    CONTINUE        reduce using rule 7 (instruction -> for .)
    RETURN          reduce using rule 7 (instruction -> for .)
    PRINT           reduce using rule 7 (instruction -> for .)
    {               reduce using rule 7 (instruction -> for .)
    $end            reduce using rule 7 (instruction -> for .)
    }               reduce using rule 7 (instruction -> for .)
    ELSE            reduce using rule 7 (instruction -> for .)


state 7

    (0) S' -> program .



state 8

    (11) instruction -> print .

    ID              reduce using rule 11 (instruction -> print .)
    IF              reduce using rule 11 (instruction -> print .)
    FOR             reduce using rule 11 (instruction -> print .)
    WHILE           reduce using rule 11 (instruction -> print .)
    BREAK           reduce using rule 11 (instruction -> print .)
    CONTINUE        reduce using rule 11 (instruction -> print .)
    RETURN          reduce using rule 11 (instruction -> print .)
    PRINT           reduce using rule 11 (instruction -> print .)
    {               reduce using rule 11 (instruction -> print .)
    $end            reduce using rule 11 (instruction -> print .)
    }               reduce using rule 11 (instruction -> print .)
    ELSE            reduce using rule 11 (instruction -> print .)


state 9

    (9) instruction -> command .

    ID              reduce using rule 9 (instruction -> command .)
    IF              reduce using rule 9 (instruction -> command .)
    FOR             reduce using rule 9 (instruction -> command .)
    WHILE           reduce using rule 9 (instruction -> command .)
    BREAK           reduce using rule 9 (instruction -> command .)
    CONTINUE        reduce using rule 9 (instruction -> command .)
    RETURN          reduce using rule 9 (instruction -> command .)
    PRINT           reduce using rule 9 (instruction -> command .)
    {               reduce using rule 9 (instruction -> command .)
    $end            reduce using rule 9 (instruction -> command .)
    }               reduce using rule 9 (instruction -> command .)
    ELSE            reduce using rule 9 (instruction -> command .)


state 10

    (20) ifx -> IF . ( condition ) instruction
    (21) if_else -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 47


state 11

    (6) instruction -> if_else .

    ID              reduce using rule 6 (instruction -> if_else .)
    IF              reduce using rule 6 (instruction -> if_else .)
    FOR             reduce using rule 6 (instruction -> if_else .)
    WHILE           reduce using rule 6 (instruction -> if_else .)
    BREAK           reduce using rule 6 (instruction -> if_else .)
    CONTINUE        reduce using rule 6 (instruction -> if_else .)
    RETURN          reduce using rule 6 (instruction -> if_else .)
    PRINT           reduce using rule 6 (instruction -> if_else .)
    {               reduce using rule 6 (instruction -> if_else .)
    $end            reduce using rule 6 (instruction -> if_else .)
    }               reduce using rule 6 (instruction -> if_else .)
    ELSE            reduce using rule 6 (instruction -> if_else .)


state 12

    (22) for -> FOR . iterator instruction
    (23) iterator -> . ID = factor : factor

    ID              shift and go to state 49

    iterator                       shift and go to state 48

state 13

    (4) instruction -> assignment .

    ID              reduce using rule 4 (instruction -> assignment .)
    IF              reduce using rule 4 (instruction -> assignment .)
    FOR             reduce using rule 4 (instruction -> assignment .)
    WHILE           reduce using rule 4 (instruction -> assignment .)
    BREAK           reduce using rule 4 (instruction -> assignment .)
    CONTINUE        reduce using rule 4 (instruction -> assignment .)
    RETURN          reduce using rule 4 (instruction -> assignment .)
    PRINT           reduce using rule 4 (instruction -> assignment .)
    {               reduce using rule 4 (instruction -> assignment .)
    $end            reduce using rule 4 (instruction -> assignment .)
    }               reduce using rule 4 (instruction -> assignment .)
    ELSE            reduce using rule 4 (instruction -> assignment .)


state 14

    (12) instruction -> compound .

    ID              reduce using rule 12 (instruction -> compound .)
    IF              reduce using rule 12 (instruction -> compound .)
    FOR             reduce using rule 12 (instruction -> compound .)
    WHILE           reduce using rule 12 (instruction -> compound .)
    BREAK           reduce using rule 12 (instruction -> compound .)
    CONTINUE        reduce using rule 12 (instruction -> compound .)
    RETURN          reduce using rule 12 (instruction -> compound .)
    PRINT           reduce using rule 12 (instruction -> compound .)
    {               reduce using rule 12 (instruction -> compound .)
    $end            reduce using rule 12 (instruction -> compound .)
    }               reduce using rule 12 (instruction -> compound .)
    ELSE            reduce using rule 12 (instruction -> compound .)


state 15

    (13) assignment -> ID . = expression ;
    (14) assignment -> ID . ADDASSIGN expression ;
    (15) assignment -> ID . SUBASSIGN expression ;
    (16) assignment -> ID . MULASSIGN expression ;
    (17) assignment -> ID . DIVASSIGN expression ;
    (18) assignment -> ID . [ vector ] = expression ;
    (19) assignment -> ID . = ID [ vector ] ;

    =               shift and go to state 51
    ADDASSIGN       shift and go to state 54
    SUBASSIGN       shift and go to state 50
    MULASSIGN       shift and go to state 53
    DIVASSIGN       shift and go to state 52
    [               shift and go to state 55


state 16

    (1) program -> instructions .

    }               reduce using rule 1 (program -> instructions .)
    $end            reduce using rule 1 (program -> instructions .)


state 17

    (2) instructions -> instruction .
    (3) instructions -> instruction . instructions
    (2) instructions -> . instruction
    (3) instructions -> . instruction instructions
    (4) instruction -> . assignment
    (5) instruction -> . ifx
    (6) instruction -> . if_else
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . command
    (10) instruction -> . return
    (11) instruction -> . print
    (12) instruction -> . compound
    (13) assignment -> . ID = expression ;
    (14) assignment -> . ID ADDASSIGN expression ;
    (15) assignment -> . ID SUBASSIGN expression ;
    (16) assignment -> . ID MULASSIGN expression ;
    (17) assignment -> . ID DIVASSIGN expression ;
    (18) assignment -> . ID [ vector ] = expression ;
    (19) assignment -> . ID = ID [ vector ] ;
    (20) ifx -> . IF ( condition ) instruction
    (21) if_else -> . IF ( condition ) instruction ELSE instruction
    (22) for -> . FOR iterator instruction
    (24) while -> . WHILE ( condition ) instruction
    (25) command -> . BREAK ;
    (26) command -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN expression ;
    (29) print -> . PRINT DOUBLEAPOSTROPHE expression DOUBLEAPOSTROPHE ;
    (30) print -> . PRINT vector ;
    (31) compound -> . { program }
    (32) compound -> . { }

    $end            reduce using rule 2 (instructions -> instruction .)
    }               reduce using rule 2 (instructions -> instruction .)
    ID              shift and go to state 15
    IF              shift and go to state 10
    FOR             shift and go to state 12
    WHILE           shift and go to state 2
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 3
    RETURN          shift and go to state 1
    PRINT           shift and go to state 4
    {               shift and go to state 21

    if_else                        shift and go to state 11
    for                            shift and go to state 6
    assignment                     shift and go to state 13
    instruction                    shift and go to state 17
    ifx                            shift and go to state 18
    while                          shift and go to state 20
    command                        shift and go to state 9
    compound                       shift and go to state 14
    print                          shift and go to state 8
    return                         shift and go to state 5
    instructions                   shift and go to state 56

state 18

    (5) instruction -> ifx .

    ID              reduce using rule 5 (instruction -> ifx .)
    IF              reduce using rule 5 (instruction -> ifx .)
    FOR             reduce using rule 5 (instruction -> ifx .)
    WHILE           reduce using rule 5 (instruction -> ifx .)
    BREAK           reduce using rule 5 (instruction -> ifx .)
    CONTINUE        reduce using rule 5 (instruction -> ifx .)
    RETURN          reduce using rule 5 (instruction -> ifx .)
    PRINT           reduce using rule 5 (instruction -> ifx .)
    {               reduce using rule 5 (instruction -> ifx .)
    $end            reduce using rule 5 (instruction -> ifx .)
    }               reduce using rule 5 (instruction -> ifx .)
    ELSE            reduce using rule 5 (instruction -> ifx .)


state 19

    (25) command -> BREAK . ;

    ;               shift and go to state 57


state 20

    (8) instruction -> while .

    ID              reduce using rule 8 (instruction -> while .)
    IF              reduce using rule 8 (instruction -> while .)
    FOR             reduce using rule 8 (instruction -> while .)
    WHILE           reduce using rule 8 (instruction -> while .)
    BREAK           reduce using rule 8 (instruction -> while .)
    CONTINUE        reduce using rule 8 (instruction -> while .)
    RETURN          reduce using rule 8 (instruction -> while .)
    PRINT           reduce using rule 8 (instruction -> while .)
    {               reduce using rule 8 (instruction -> while .)
    $end            reduce using rule 8 (instruction -> while .)
    }               reduce using rule 8 (instruction -> while .)
    ELSE            reduce using rule 8 (instruction -> while .)


state 21

    (31) compound -> { . program }
    (32) compound -> { . }
    (1) program -> . instructions
    (2) instructions -> . instruction
    (3) instructions -> . instruction instructions
    (4) instruction -> . assignment
    (5) instruction -> . ifx
    (6) instruction -> . if_else
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . command
    (10) instruction -> . return
    (11) instruction -> . print
    (12) instruction -> . compound
    (13) assignment -> . ID = expression ;
    (14) assignment -> . ID ADDASSIGN expression ;
    (15) assignment -> . ID SUBASSIGN expression ;
    (16) assignment -> . ID MULASSIGN expression ;
    (17) assignment -> . ID DIVASSIGN expression ;
    (18) assignment -> . ID [ vector ] = expression ;
    (19) assignment -> . ID = ID [ vector ] ;
    (20) ifx -> . IF ( condition ) instruction
    (21) if_else -> . IF ( condition ) instruction ELSE instruction
    (22) for -> . FOR iterator instruction
    (24) while -> . WHILE ( condition ) instruction
    (25) command -> . BREAK ;
    (26) command -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN expression ;
    (29) print -> . PRINT DOUBLEAPOSTROPHE expression DOUBLEAPOSTROPHE ;
    (30) print -> . PRINT vector ;
    (31) compound -> . { program }
    (32) compound -> . { }

    }               shift and go to state 59
    ID              shift and go to state 15
    IF              shift and go to state 10
    FOR             shift and go to state 12
    WHILE           shift and go to state 2
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 3
    RETURN          shift and go to state 1
    PRINT           shift and go to state 4
    {               shift and go to state 21

    if_else                        shift and go to state 11
    for                            shift and go to state 6
    assignment                     shift and go to state 13
    instruction                    shift and go to state 17
    ifx                            shift and go to state 18
    while                          shift and go to state 20
    program                        shift and go to state 58
    command                        shift and go to state 9
    compound                       shift and go to state 14
    print                          shift and go to state 8
    return                         shift and go to state 5
    instructions                   shift and go to state 16

state 22

    (35) factor -> number .

    ;               reduce using rule 35 (factor -> number .)
    PLUS            reduce using rule 35 (factor -> number .)
    MINUS           reduce using rule 35 (factor -> number .)
    TIMES           reduce using rule 35 (factor -> number .)
    DIVIDE          reduce using rule 35 (factor -> number .)
    DOTADD          reduce using rule 35 (factor -> number .)
    DOTSUB          reduce using rule 35 (factor -> number .)
    DOTMUL          reduce using rule 35 (factor -> number .)
    DOTDIV          reduce using rule 35 (factor -> number .)
    LESS_THAN       reduce using rule 35 (factor -> number .)
    GREATER_THAN    reduce using rule 35 (factor -> number .)
    LESS_OR_EQUAL_THAN reduce using rule 35 (factor -> number .)
    GREATER_OR_EQUAL_THAN reduce using rule 35 (factor -> number .)
    NOT_EQUAL       reduce using rule 35 (factor -> number .)
    EQUAL           reduce using rule 35 (factor -> number .)
    ,               reduce using rule 35 (factor -> number .)
    DOUBLEAPOSTROPHE reduce using rule 35 (factor -> number .)
    )               reduce using rule 35 (factor -> number .)
    :               reduce using rule 35 (factor -> number .)
    ]               reduce using rule 35 (factor -> number .)
    ID              reduce using rule 35 (factor -> number .)
    IF              reduce using rule 35 (factor -> number .)
    FOR             reduce using rule 35 (factor -> number .)
    WHILE           reduce using rule 35 (factor -> number .)
    BREAK           reduce using rule 35 (factor -> number .)
    CONTINUE        reduce using rule 35 (factor -> number .)
    RETURN          reduce using rule 35 (factor -> number .)
    PRINT           reduce using rule 35 (factor -> number .)
    {               reduce using rule 35 (factor -> number .)


state 23

    (37) number -> FLOATNUM .
